@@ -1,3 +1,8 @@
+2004-10-01  Satoru Takabayashi  <satoru@namazu.org>
+
+	* catalog-validator.rb (CatalogValidator): Renamed from
+	MessageValidator. 
+
 2004-08-15  Satoru Takabayashi  <satoru@namazu.org>
 
 	* pdumpfs.in (parse_options): Don't strip the trailing '/' in the
